--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,16 +12,14 @@
     font-weight: 700;
     font-style: normal;
   }
-
   /*se agrega fuente 2 cabin*/
- 
-.cabin {
+ .cabin {
   font-family: "Cabin", sans-serif;
   font-weight: 400;
   font-style: normal;
   color: #373A3C;
 }
-  
+
  /*css*/
  footer{
     background-color: #373A3C;
@@ -41,4 +39,12 @@ body{
 }
 .pink{
 background-color: #DC3545;
+}
+
+.c-bold{
+  font-family: "Cabin", sans-serif;
+  font-weight: bold;
+  font-style: normal;
+  color: #373A3C;
+  
 }
